--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,9 +21,33 @@ authors = ["collectiveai <info@collectiveai.io>"]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.11"
+pyyaml = "^6.0"  # Updated to a newer version
+websocket-client = "1.3.3"
+numpy = "^1.21"
+librosa = "0.9.2"
+webrtcvad = "2.0.10"
+pyctcdecode = "0.4.0"
+fastapi = "0.79.0"
+uvicorn = {extras = ["standard"], version = "0.18.2"}
+typer = "0.6.1"
+soundfile = "0.10.2"
+pyaudio = "0.2.12"
+
+#[tool.poetry.group.nemo]
+#optional = true
+
+#[tool.poetry.group.nemo.dependencies]
+#nemo_toolkit = {extras = ["asr"], version = "1.10.0"}
+# socketio = "^0.2.1"
+
+[tool.poetry.group.whisper]
+optional = true
+
+[tool.poetry.group.whisper.dependencies]
+ openai-whisper = "^v20231117"
+
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.2"
