--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,3 +66,10 @@ filterwarnings = [
     # note the use of single quote below to denote "raw" strings in TOML
     'ignore:.*:DeprecationWarning',
 ]
+
+[tool.poetry.system_dependencies]
+apt = [
+    "portaudio19-dev",
+    "libsndfile1",
+    "ffmpeg"
+]
