--- a/.github/workflows/python-release.yml
+++ b/.github/workflows/python-release.yml
@@ -19,6 +19,11 @@ jobs:
               uses: actions/setup-python@v2
               with:
                   python-version: 3.11
+            
+            - name: Install system dependencies
+              run: |
+                sudo apt-get update
+                sudo apt-get install -y portaudio19-dev python3-all-dev
 
             - name: Install Poetry
               run: |
