--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,3 +66,8 @@ filterwarnings = [
     # note the use of single quote below to denote "raw" strings in TOML
     'ignore:.*:DeprecationWarning',
 ]
+
+
+[tool.poetry.scripts]
+awss-server = "awss.server.websocket_server:app"
+awss-stream-audio = "awss.client.stream_audio_file:app"
