--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ force_sort_within_sections = true
 
 [tool.poetry]
 name = "awss"
-version = "0.0.3"
+version = "0.0.5"
 packages = [
     { include = "awss" }
 ]
@@ -34,6 +34,8 @@ uvicorn = {extras = ["standard"], version = "0.18.2"}
 typer = "0.6.1"
 soundfile = "0.10.2"
 pyaudio = "0.2.12"
+openai-whisper = "^v20231117"
+SpeechRecognition = "^3.10.4"
 
 #[tool.poetry.group.nemo]
 #optional = true
