--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ webrtcvad = "2.0.10"
 pyctcdecode = "0.4.0"
 fastapi = "^0.110.0"
 uvicorn = {extras = ["standard"], version = "^0.18.2"}
-typer = "0.6.1"
+typer = "^0.12.3"
 soundfile = "0.10.2"
 pyaudio = "0.2.12"
 
