add speech frame detector

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -39,7 +39,8 @@
 				"files.watcherExclude": {
 					"**/.git/objects/**": true,
 					"**/.git/subtree-cache/**": true
-				}
+				},
+				"extensions.verifySignature": false
 			},
 			// Add the IDs of extensions you want installed when the container is created.
 			"extensions": [
