--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ python = "^3.10"
 pyyaml = "^6.0"  # Updated to a newer version
 websocket-client = "1.3.3"
 numpy = "^1.21"
-librosa = "^0.9.2"
+librosa = ">=0.9.2"
 webrtcvad = "2.0.10"
 pyctcdecode = "0.4.0"
 fastapi = "^0.110.0"
